# gpusockets

./: .gitignore  Makefile  autogen.sh  client.c  client.h  common.c  common.h  common.pb-c.c  common.pb-c.h  common.proto  configure.ac  cuda_errors.h  libcudawrapper.c  list.h  matSumKernel.ptx  process.c  process.h  protocol.c  protocol.h  server.c  test-client.c  test-cuda.c
src/: Makefile.am  client.c  client.h  common.h  cuda_errors.h  libcudawrapper.c  process.c  process.h  protocol.c  protocol.h  server.c  timer.h  timers.h
